# logos

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/scripts/: bundle-sidecar.mjs  tauri-dev.mjs
apps/desktop/src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  DECISIONS.md  MULTICA_ANALYSIS.md  ROADMAP.md
scripts/: README.md  diagnose.ps1
server/: go.mod  go.sum
server/cmd/logos-server/: main.go
server/internal/agent/: backend.go  claude.go  copilot.go
server/internal/auth/: localtoken.go
server/internal/config/: config.go
server/internal/events/: bus.go
server/internal/handler/: agent.go  comment.go  handler.go  issue.go  project.go  runtime.go  squad.go  task.go
server/internal/mentions/: mentions.go  mentions_test.go
server/internal/projectinfo/: projectinfo.go
server/internal/realtime/: hub.go
server/internal/service/: comment.go  runner.go  squad.go  task.go
server/internal/store/: agent.go  comment.go  issue.go  nullable.go  project.go  runtime.go  squad.go  store.go  task.go
server/migrations/: 001_init.sql  002_projects.sql  003_task_diff_stat.sql  004_comments.sql  005_squads.sql  embed.go
server/pkg/protocol/: events.go  messages.go
(+14 files in other folders)
